# tmwphone

./: .cargo-checksum.json  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  PKGBUILD.local  README.md  build.rs  install-deps.sh  sofia-sip_1.12.11+20110422.1+1e14eea~dfsg-6.1build3.debian.tar.xz  sofia-sip_1.12.11+20110422.1+1e14eea~dfsg-6.1build3.dsc  sofia-sip_1.12.11+20110422.1+1e14eea~dfsg.orig.tar.xz
.github/workflows/: ci.yml
data/: io.github.thomaswasle.TMWPhone.desktop  io.github.thomaswasle.TMWPhone.gschema.xml  net.loca.Client.desktop  net.loca.Client.gschema.xml  net.loca.TMWPhone.desktop
data/ui/: call_screen.ui  dialpad.ui  settings_dialog.ui  window.ui
debian/: changelog  control  copyright  locaclient.install  rules  tmwphone.install  tmwphone.substvars
debian/cargo_home/: config.toml
debian/tmwphone/DEBIAN/: control  md5sums
sofia-sip-1.12.11+20110422.1+1e14eea~dfsg/debian/: changelog  changelog.old  control  copyright  copyright_hints  libsofia-sip-ua-dev.install  libsofia-sip-ua-glib-dev.install  libsofia-sip-ua-glib3t64.install  libsofia-sip-ua-glib3t64.lintian-overrides  libsofia-sip-ua-glib3t64.symbols  libsofia-sip-ua0t64.install  libsofia-sip-ua0t64.lintian-overrides  libsofia-sip-ua0t64.symbols  rules  sofia-sip-doc.docs  watch
sofia-sip-1.12.11+20110422.1+1e14eea~dfsg/debian/patches/: 0001-cve-fix-oob-read-sip_method_d.patch  series  (+7 more)
src/: accounts.rs  application.rs  audio.rs  call_log.rs  config.rs  keyring.rs  main.rs  quickdial.rs  ringer.rs  window.rs
src/sip/: ffi.rs  glue.c  glue.h  mod.rs
src/widgets/: call_screen.rs  dialpad.rs  mod.rs  settings_dialog.rs
(+11 files in other folders)
