[package]
name = "tmwphone"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmwphone"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
glib = "0.20"
gio = "0.20"
gstreamer = "0.23"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
