[package]
name = "tmwphone"
version = "0.1.0"
edition = "2021"
description = "SIP softphone client for the GNOME desktop"
authors = ["Thomas Müller-Wasle <thomas.mueller1401@gmx.de>"]
license = "Apache-2.0"
repository = "https://github.com/thomaswasle/tmwphone"
homepage = "https://github.com/thomaswasle/tmwphone"

[[bin]]
name = "tmwphone"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
glib = "0.20"
gio = "0.20"
gstreamer = "0.23"
libsecret = "0.7"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
